PROGRESS 13.30: goal for the first running demo — pong on the JVM (59 native stubs, not 20; provider snapshots cached; five ordered steps)